--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:wght@300&display=swap');
 
+:root {
+  --DarkGray:  hsl(0, 0%, 55%);
+  --VeryDarkGray: hsl(0, 0%, 41%);
+}
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+body {
+  font-family: Josefin Sans;
 }
