--- a/src/Creations.css
+++ b/src/Creations.css
@@ -47,6 +47,9 @@
         text-align: start;
         padding-left: 4rem;
     }
+    .creation-title{
+     font-size: 2rem;
+    }
     #creations{
         position: relative;
         margin-top: 5rem;
